--- a/src/components/Ministry.css
+++ b/src/components/Ministry.css
@@ -73,13 +73,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.1) 30%,
-    rgba(0, 0, 0, 0.8) 100%
-  );
-  opacity: 0.8;
+  background-color: black;
+  opacity: 0.7;
   transition: all 0.4s ease;
 }
 
